<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_clicked"
        android:title="@string/home"
        app:cnb_backgroundColor="#353535"
        app:cnb_iconTintMode="src_in"
        app:cnb_iconColor="@color/accent"
        app:cnb_textColor="@color/accent"/>
    <item
        android:title="@string/series"
        android:id="@+id/series"
        android:icon="@drawable/ic_series_clicked"
        app:cnb_backgroundColor="#353535"
        app:cnb_iconColor="@color/accent"
        app:cnb_textColor="@color/accent"/>
    <item
        android:title="@string/livetv"
        android:id="@+id/live_tv"
        android:icon="@drawable/ic_live_tv_clicked"
        app:cnb_backgroundColor="#353535"
        app:cnb_iconColor="@color/accent"
        app:cnb_textColor="@color/accent"/>
    <item
        android:title="@string/downloads"
        android:id="@+id/downloads"
        android:icon="@drawable/ic_download_clicked"
        app:cnb_backgroundColor="#353535"
        app:cnb_iconColor="@color/accent"
        app:cnb_textColor="@color/accent"/>
    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_clicked"
        app:cnb_backgroundColor="#353535"
        app:cnb_iconColor="@color/accent"
        app:cnb_textColor="@color/accent"/>
</menu>